@@ -6,13 +6,26 @@
 	<version>0.4-SNAPSHOT</version>
 	<name>User Agent Sniffer</name>
 	<url>http://www.github.com/znerd/uasniffer</url>
+
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<znerd-util.version>0.5-SNAPSHOT</znerd-util.version>
+	</properties>
+
 	<dependencies>
+		<dependency>
+			<groupId>org.znerd</groupId>
+			<artifactId>znerd-util</artifactId>
+			<version>${znerd-util.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.8.2</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
+
 	<build>
 		<plugins>
 			<plugin>
@@ -59,7 +72,4 @@
 			</plugin>
 		</plugins>
 	</build>
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	</properties>
 </project>
