@@ -3,237 +3,157 @@
 package org.znerd.uasniffer;
 
 import java.io.*;
+import static org.znerd.util.text.TextUtils.quote;
+import static org.znerd.util.text.TextUtils.isEmpty;
+import static org.znerd.util.Preconditions.checkArgument;
 import java.util.*;
 
 import org.junit.Before;
 import org.junit.Test;
 import static org.junit.Assert.*;
 
-/**
- * Tests for the <code>Sniffer</code> class.
- *
- * @author <a href="mailto:ernst@ernstdehaan.com">Ernst de Haan</a>
- */
 public class SnifferTest extends Object {
 
-   private static boolean isEmpty(String s) {
-      return s == null || s.length() < 1;
-   }
+    private TestData _testData;
 
-   private static String quote(Object obj) {
-      if (obj == null) {
-         return "(null)";
-      } else {
-         return "\"" + obj.toString() + '"';
-      }
-   }
+    @Before
+    public void loadTestData() throws Exception {
+        Class<?> clazz = getClass();
+        InputStream byteStream = clazz.getResourceAsStream(clazz.getSimpleName() + "-input.txt");
+        Reader charStream = new InputStreamReader(byteStream, "UTF-8");
+        LineNumberReader lines = new LineNumberReader(charStream);
 
-   private TestData _testData;
+        _testData = new TestData(lines);
+    }
 
-   @Before
-   public void loadTestData() throws Exception {
-      Class            clazz = getClass();
-      InputStream byteStream = clazz.getResourceAsStream(clazz.getSimpleName() + "-input.txt");
-      Reader      charStream = new InputStreamReader(byteStream, "UTF-8");
-      LineNumberReader lines = new LineNumberReader(charStream);
+    @Test
+    public void testUserAgentSniffer() throws Exception {
 
-      _testData = new TestData(lines);
-   }
+        long start = System.currentTimeMillis();
 
-   @Test
-   public void testUserAgentSniffer() throws Exception {
+        for (TestData.Entry entry : _testData.getEntries()) {
+            String agentString = entry.getAgentString();
+            UserAgent ua = Sniffer.analyze(agentString);
 
-      long start = System.currentTimeMillis();
+            // System.out.println(getClass().getSimpleName() + ": Sniffed in " + testDuration + " ms: " + agentString);
 
-      long     maxTestDuration = -0L;
-      String maxTestDurationUA = null;
-      for (TestData.Entry entry : _testData.getEntries()) {
-         String agentString = entry.getAgentString();
+            assertEquals(agentString, ua.getAgentString());
+            assertEquals(agentString.toLowerCase(), ua.getLowerCaseAgentString());
 
-         long    testStart = System.currentTimeMillis();
-         UserAgent      ua = Sniffer.analyze(agentString);
-         long testDuration = System.currentTimeMillis() - testStart;
+            // Find all recognized names
+            Collection<String> actualNames = ua.getNames();
 
-         // System.out.println(getClass().getSimpleName() + ": Sniffed in " + testDuration + " ms: " + agentString);
-
-         if (testDuration > maxTestDuration) {
-            maxTestDuration   = testDuration;
-            maxTestDurationUA = agentString;
-         }
-
-         assertEquals(agentString,               ua.getAgentString()         );
-         assertEquals(agentString.toLowerCase(), ua.getLowerCaseAgentString());
-
-         // Find all recognized names
-         Collection<String> actualNames = ua.getNames();
-
-         // Compare expected and recognized
-         Collection<String> actualNames2 = new HashSet<String>(actualNames);
-         for (String expectedName : entry.getOutputStrings()) {
-            if (actualNames.contains(expectedName)) {
-               actualNames.remove(expectedName);
-            } else {
-               String message = "For agent string \"" + agentString + "\": Missing expected name \"" + expectedName + "\".";
-               System.out.println(message);
-               for (String name : actualNames2) {
-                  System.out.println("-- did find name: " + name);
-               }
-               fail(message);
-               throw new Error();
-            }
-         }
-
-         // Some unexpected ones remain
-         if (actualNames.size() > 0) {
-            fail("For agent string \"" + agentString + "\": Found " + actualNames.size() + " unexpected name(s), like \"" + actualNames.iterator().next() + "\".");
-         }
-      }
-
-      long      duration = System.currentTimeMillis() - start;
-      int      testCount = _testData.getEntries().size();
-      double timePerTest = ((double) duration) / ((double) testCount);
-      System.out.println(getClass().getSimpleName() + ": Performed " + testCount + " tests in " + duration + " ms (which is " + timePerTest + " ms per user agent sniff, on average). Max duration was " + maxTestDuration + " ms, for user agent: \"" + maxTestDurationUA + "\".");
-   }
-
-
-   //-------------------------------------------------------------------------
-   // Inner classes
-   //-------------------------------------------------------------------------
-
-   private static class TestData {
-
-      //----------------------------------------------------------------------
-      // Constructors
-      //----------------------------------------------------------------------
-
-      TestData(LineNumberReader reader)
-      throws IllegalArgumentException, IOException {
-
-         _entries = new ArrayList<Entry>();
-
-         // Process each line
-         String line, agentString = null;
-         List<String> outputStrings = new ArrayList<String>();
-         while ((line = reader.readLine()) != null) {
-
-            // Remove whitespace on both ends
-            line = line.trim();
-
-            // Empty line means: next entry;
-            // if there is some data, store it and then reset
-            if ("".equals(line)) {
-               if (agentString != null) {
-                  _entries.add(new Entry(agentString, outputStrings));
-                  agentString   = null;
-                  outputStrings = new ArrayList<String>();
-               }
-
-            // Ignore comments
-            } else if (line.startsWith("#")) {
-               continue;
-
-            // First line or first line after empty line is the agent string
-            } else if (agentString == null) {
-               agentString = line;
-
-            // Otherwise this is an expected output string
-            } else {
-               outputStrings.add(line);
-            }
-         }
-
-         // Add last entry, if any
-         if (agentString != null) {
-            _entries.add(new Entry(agentString, outputStrings));
-         }
-      }
-
-
-      //----------------------------------------------------------------------
-      // Fields
-      //----------------------------------------------------------------------
-
-      Collection<Entry> _entries;
-
-
-      //----------------------------------------------------------------------
-      // Methods
-      //----------------------------------------------------------------------
-
-      public Collection<Entry> getEntries() {
-         return _entries;
-      }
-
-
-      //----------------------------------------------------------------------
-      // Inner classes
-      //----------------------------------------------------------------------
-
-      static class Entry {
-
-         //-------------------------------------------------------------------
-         // Constructors
-         //-------------------------------------------------------------------
-
-         /**
-          * Constructs a new <code>Entry</code>.
-          *
-          * @param agentString
-          *    the user agent string, cannot be <code>null</code> nor empty.
-          *
-          * @param outputStrings
-          *    the expected output strings, cannot be <code>null</code>,
-          *    cannot be empty and cannot contain any <code>null</code>, empty
-          *    or duplicate elements.
-          *
-          * @throws IllegalArgumentException
-          *    if any of the preconditions failed.
-          */
-         Entry(String agentString, Collection<String> outputStrings)
-         throws IllegalArgumentException {
-
-            // Check preconditions
-            if (isEmpty(agentString)) {
-               throw new IllegalArgumentException("agentString (" + quote(agentString) + ") is null or empty.");
-            } else if (outputStrings == null) {
-               throw new IllegalArgumentException("outputStrings " + quote(outputStrings) + " == null (for agent string \"" + agentString + "\")");
+            // Compare expected and recognized
+            Collection<String> actualNames2 = new HashSet<String>(actualNames);
+            for (String expectedName : entry.getOutputStrings()) {
+                if (actualNames.contains(expectedName)) {
+                    actualNames.remove(expectedName);
+                } else {
+                    String message = "For agent string \"" + agentString + "\": Missing expected name \"" + expectedName + "\".";
+                    System.out.println(message);
+                    for (String name : actualNames2) {
+                        System.out.println("-- did find name: " + name);
+                    }
+                    fail(message);
+                    throw new Error();
+                }
             }
 
-            // Copy all output strings
-            _outputStrings = new ArrayList<String>();
-            for (String s : outputStrings) {
-               if (isEmpty(s)) {
-                  throw new IllegalArgumentException("One of the output strings is null or empty (for agent string \"" + agentString + "\")");
-               } else if (_outputStrings.contains(s)) {
-                  throw new IllegalArgumentException("Found duplicate output string \"" + s + "\" (for agent string \"" + agentString + "\")");
-               }
-               _outputStrings.add(s);
+            // Some unexpected ones remain
+            if (actualNames.size() > 0) {
+                fail("For agent string \"" + agentString + "\": Found " + actualNames.size() + " unexpected name(s), like \"" + actualNames.iterator().next() + "\".");
+            }
+        }
+
+        long duration = System.currentTimeMillis() - start;
+        int testCount = _testData.getEntries().size();
+        double timePerTest = ((double) duration) / ((double) testCount);
+        System.out.println(getClass().getSimpleName() + ": Performed " + testCount + " tests in " + duration + " ms (which is " + timePerTest + " ms per user agent sniff, on average).");
+    }
+
+    private static class TestData {
+
+        TestData(LineNumberReader reader) throws IllegalArgumentException, IOException {
+
+            _entries = new ArrayList<Entry>();
+
+            // Process each line
+            String line, agentString = null;
+            List<String> outputStrings = new ArrayList<String>();
+            while ((line = reader.readLine()) != null) {
+
+                // Remove whitespace on both ends
+                line = line.trim();
+
+                // Empty line means: next entry;
+                // if there is some data, store it and then reset
+                if ("".equals(line)) {
+                    if (agentString != null) {
+                        _entries.add(new Entry(agentString, outputStrings));
+                        agentString = null;
+                        outputStrings = new ArrayList<String>();
+                    }
+
+                    // Ignore comments
+                } else if (line.startsWith("#")) {
+                    continue;
+
+                    // First line or first line after empty line is the agent string
+                } else if (agentString == null) {
+                    agentString = line;
+
+                    // Otherwise this is an expected output string
+                } else {
+                    outputStrings.add(line);
+                }
             }
 
-            // Store the agent string
-            _agentString = agentString;
-         }
+            // Add last entry, if any
+            if (agentString != null) {
+                _entries.add(new Entry(agentString, outputStrings));
+            }
+        }
 
+        final Collection<Entry> _entries;
 
-         //-------------------------------------------------------------------
-         // Fields
-         //-------------------------------------------------------------------
+        public Collection<Entry> getEntries() {
+            return _entries;
+        }
 
-         private final String _agentString;
-         private final Collection<String> _outputStrings;
+        static class Entry {
 
+            Entry(String agentString, Collection<String> expectedOutputStrings) throws IllegalArgumentException {
+                checkPreconditions(agentString, expectedOutputStrings);
+                _outputStrings = copyAllOutputStrings(agentString, expectedOutputStrings);
+                _agentString = agentString;
+            }
 
-         //-------------------------------------------------------------------
-         // Methods
-         //-------------------------------------------------------------------
+            private void checkPreconditions(String agentString, Collection<String> expectedOutputStrings) {
+                checkArgument(isEmpty(agentString), "agentString (" + quote(agentString) + ") is null or empty.");
+                checkArgument(expectedOutputStrings == null, "outputStrings " + quote(expectedOutputStrings) + " == null (for agent string \"" + agentString + "\")");
+            }
+            
+            private final Collection<String> _outputStrings;
 
-         String getAgentString() {
-            return _agentString;
-         }
+            private List<String> copyAllOutputStrings(String agentString, Collection<String> outputStrings) {
+                List<String> result = new ArrayList<String>();
+                for (String s : outputStrings) {
+                    checkArgument(isEmpty(s), "One of the output strings is null or empty (for agent string \"" + agentString + "\")");
+                    checkArgument(result.contains(s), "Found duplicate output string \"" + s + "\" (for agent string \"" + agentString + "\")");
+                    result.add(s);
+                }
+                return result;
+            }
 
-         Collection<String> getOutputStrings() {
-            return _outputStrings;
-         }
-      }
-   }
+            private final String _agentString;
+
+            Collection<String> getOutputStrings() {
+                return _outputStrings;
+            }
+
+            String getAgentString() {
+                return _agentString;
+            }
+        }
+    }
 }
